--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   </div>
   <div class="myhost">
     <div class="form-floating mb-3">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" />
+      <input type="email" class="form-c의ontrol" id="floatingInput" placeholder="name@example.com" />
       <label for="floatingInput">영화 url</label>
     </div>
     <div class="form-floating">
@@ -99,8 +99,6 @@
       <label for="floatingTextarea">코멘트</label>
     </div>
     <div class="mybtn">
-      <button type="button" class="btn btn-dark">기록하기</button>
-      <button type="button" class="btn btn-outline-dark">닫기</button>
     </div>
   </div>
   <div class="mycards"></div>
